fix: handle capability-less providers safely